# web_ui_auto

./: .gitignore  README.md  chromium_install.py  debug_resolution.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  screenshot_baidu.py  setup.py
config/: __init__.py  base.yaml  dev.yaml  prod.yaml  qa.yaml
fixtures/: __init__.py
scripts/: run_all.sh  run_smoke.sh
src/: __init__.py
src/auto/: __init__.py  encoding_fix.py  main.py
src/auto/api/: __init__.py  login_api.py  user_api.py
src/auto/core/: __init__.py  base_api.py  base_page.py  exceptions.py
src/auto/pages/: __init__.py  baidu_search_page.py  home_page.py
src/auto/utils/: __init__.py  browser.py  common.py  coordinates.py  file_io.py  logger.py  screenshot.py  video.py
testdata/: login_data.json  user_data.yaml
tests/: __init__.py  conftest.py
tests/test_search/: __init__.py  test_baidu_search.py
web_ui_auto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
